# Bazel-iOS-Cpp-Sample

./: .gitignore  BUILD  MODULE.bazel  WORKSPACE
BazelSample/: AppDelegate.swift  Info.plist  SceneDelegate.swift  ViewController.swift
BazelSample.xcodeproj/: project.pbxproj
BazelSample.xcodeproj/xcuserdata/prasadpamidi.xcuserdatad/xcschemes/: xcschememanagement.plist
BazelSample/Base.lproj/: Main.storyboard
cpp_tests_lib/: cpp_test.cpp
objc_tests_lib/: GoogleTests.mm
